chore: alignment and margin fixes

--- a/src/index.css
+++ b/src/index.css
@@ -518,6 +518,7 @@ body {
   background-color: #fff;
   border-radius: 10px;
   padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+  margin-bottom: 2rem;
 }
 
 .properties-contact-details {
@@ -598,7 +599,7 @@ body {
 }
 
 .properties-job-table table tbody tr td {
-  padding: 1.5rem 1.3rem 1.5rem 1.3rem;
+  padding: 1.5rem 1rem 1.5rem 1rem;
   border-radius: 10px;
   border-bottom: 1px solid rgba(242, 242, 242, 1);
 }
